--- a/Ejercicio1-CRUD_Clientes/Ejercicio1-CRUD_Clientes/packages.config
+++ b/Ejercicio1-CRUD_Clientes/Ejercicio1-CRUD_Clientes/packages.config
@@ -15,11 +15,19 @@
   <package id="Microsoft.AspNet.WebPages.es" version="3.3.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.4" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="4.1.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="9.0.4" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="9.0.4" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging" version="9.0.4" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="9.0.4" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Options" version="9.0.4" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Primitives" version="9.0.4" targetFramework="net48" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="4.0.0" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net48" />
   <package id="Modernizr" version="2.8.3" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
   <package id="Serilog" version="4.2.0" targetFramework="net48" />
+  <package id="Serilog.Extensions.Logging" version="9.0.1" targetFramework="net48" />
+  <package id="Serilog.Sinks.File" version="6.0.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.6.1" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="9.0.4" targetFramework="net48" />
   <package id="System.Memory" version="4.6.3" targetFramework="net48" />
@@ -27,5 +35,6 @@
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.2" targetFramework="net48" />
   <package id="System.Threading.Channels" version="9.0.4" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.6.3" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.6.1" targetFramework="net48" />
   <package id="WebGrease" version="1.6.0" targetFramework="net48" />
 </packages>
